[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "application"
version = "0.1.0"
description = "A simple Hello World package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PyQt6"
]

[tool.setuptools]
packages = ["application"]