[build-system]
requires = ["setuptools"]

[project]
name = "application"
version = "0.1.0"
description = "A simple Hello World package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PyQt6"
]

[tool.pytest.ini_options]
markers = [
    "integration: tests require connection to other services or to the Internet"
]

[tool.tox]
envlist = ["3.12.8", "3.13.1"]
skipsdist = true

[tool.tox.env_run_base]
description = "run unit tests"
passenv = ["*"]
deps = [
    "pytest>=8",
    "pytest-sugar",
    "pytest-qt"
]
commands = [["pytest", "tests", "-m", "{posargs:not integration}"]]
